nav menu fix gap

--- a/scss/parciales/_navegador.scss
+++ b/scss/parciales/_navegador.scss
@@ -122,7 +122,7 @@ nav {
             .nav-links {
                 right: -6%;
                 width: 112%;
-                top: 156%;
+                top: 145%;
                 opacity: 95%;
                 padding-block-end: 2rem;
                 text-align: center;
